SERVER-34556 Iterating through indexes for a last applied timestamp transaction should use that timestamp